tests/fixtures/invalid/bool_notin_float.py
# Cannot use 'not in' with Bool and Float
x: bool = True not in 1.0
